[gd_scene load_steps=7 format=3 uid="uid://cs10gw2j0jish"]

[ext_resource type="FontFile" uid="uid://cbisu3wechjp7" path="res://assets/font/monogram.ttf" id="1_oiw14"]
[ext_resource type="Script" path="res://scripts/main_ui.gd" id="1_v736d"]
[ext_resource type="Texture2D" uid="uid://gq6okql74d1o" path="res://assets/sprites/title.png" id="2_a4ot0"]

[sub_resource type="Animation" id="Animation_l6354"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenMargin/VBoxContainer/TitleAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(63, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenMargin/VBoxContainer/ButtonAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(63, 200)]
}

[sub_resource type="Animation" id="Animation_i32ef"]
resource_name = "start_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenMargin/VBoxContainer/TitleAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.4, 2, 1),
"update": 0,
"values": [Vector2(63, 200), Vector2(63, 230), Vector2(63, -100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenMargin/VBoxContainer/ButtonAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.4, 2, 1),
"update": 0,
"values": [Vector2(63, 200), Vector2(63, 170), Vector2(63, 680)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwr7v"]
_data = {
"RESET": SubResource("Animation_l6354"),
"start_game": SubResource("Animation_i32ef")
}

[node name="MainUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_v736d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kwr7v")
}

[node name="ScreenMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenMargin"]
layout_mode = 2

[node name="TitleAnchor" type="Node2D" parent="ScreenMargin/VBoxContainer"]
position = Vector2(63, 200)

[node name="TitleMargin" type="MarginContainer" parent="ScreenMargin/VBoxContainer/TitleAnchor"]
offset_top = -200.0
offset_right = 494.0
offset_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 200

[node name="Title" type="TextureRect" parent="ScreenMargin/VBoxContainer/TitleAnchor/TitleMargin"]
layout_mode = 2
texture = ExtResource("2_a4ot0")
stretch_mode = 5

[node name="ButtonAnchor" type="Node2D" parent="ScreenMargin/VBoxContainer"]
position = Vector2(63, 200)

[node name="ButtonMargin" type="MarginContainer" parent="ScreenMargin/VBoxContainer/ButtonAnchor"]
offset_left = -63.0
offset_top = 84.0
offset_right = 557.0
offset_bottom = 356.0
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 220

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenMargin/VBoxContainer/ButtonAnchor/ButtonMargin"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="ScreenMargin/VBoxContainer/ButtonAnchor/ButtonMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oiw14")
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="ExitButton" type="Button" parent="ScreenMargin/VBoxContainer/ButtonAnchor/ButtonMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oiw14")
theme_override_font_sizes/font_size = 80
text = "Exit"

[connection signal="pressed" from="ScreenMargin/VBoxContainer/ButtonAnchor/ButtonMargin/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ScreenMargin/VBoxContainer/ButtonAnchor/ButtonMargin/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
